# mc_chimera

./: .gitignore  Dockerfile  Makefile  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
model/: config.json  pytorch_model.bin.REMOVED.git-id
src/mc_chimera/: main.py  normalize.py  rapper.py
terraform/: .gitignore  cloudbuild.tf  main.tf
tests/: test_mc_chimera.py
