[tool.poetry]
name = "mc_chimera"
version = "0.1.0"
description = ""
authors = ["masaki925 <masaki925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
line-bot-sdk = "^2.0.1"
torch = "^1.10.1"
torchtext = "^0.11.1"
transformers = "^4.15.0"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
